# hogwarts-httprunner

./: .gitignore  .travis.yml  README.md  pyproject.toml  test_mubu_login.py
hogwarts_httprunner/: cli.py  loader.py  runner.py  validate.py
tests/: test_cli.py  test_runner.py  test_single_api.py  test_testcase.py
tests/api/: api_login_submit.yml  get_homepage.yml  get_login.yml
tests/testcase/: mubu_login.yml
